# vhs-analyzer

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CONTRIBUTING.md  Cargo.toml  EXECUTION_TRACKER.md  README.md  ROADMAP.md  SECURITY.md  STATUS.yaml  biome.json  vhs-analyzer.code-workspace
.cursor/rules/: markdown-output.mdc  rust-commenting.mdc
.github/workflows/: ci.yml  extension-ci.yml  release.yml
crates/vhs-analyzer-core/: Cargo.toml
crates/vhs-analyzer-core/data/: themes.txt
crates/vhs-analyzer-core/src/: ast.rs  formatting.rs  lexer.rs  lib.rs  parser.rs  syntax.rs
crates/vhs-analyzer-core/tests/: ast_tests.rs  formatting_tests.rs  lexer_tests.rs  parser_tests.rs
crates/vhs-analyzer-lsp/: Cargo.toml
crates/vhs-analyzer-lsp/src/: completion.rs  diagnostics.rs  hover.rs  main.rs  safety.rs  server.rs
crates/vhs-analyzer-lsp/src/diagnostics/: heavyweight.rs  semantic.rs
crates/vhs-analyzer-lsp/src/safety/: patterns.rs
crates/vhs-analyzer-lsp/tests/: completion_tests.rs  diagnostics_heavyweight_tests.rs  diagnostics_tests.rs  hover_tests.rs  integration_test.rs  lsp_integration_tests.rs  phase2_integration_test.rs  safety_tests.rs
docs/: agentic-workflow.md
editors/: .gitignore
editors/code/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  biome.json  language-configuration.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
errors/ci/: phase-3-batch-5-extension-ci.txt
icon-generator/: README.md  generate.py  pyproject.toml
prompt/: PHASE1_KICK_ARCHITECT_A.md  PHASE1_KICK_ARCHITECT_B.md  PHASE1_KICK_BUILDER.md  PHASE2_KICK_ARCHITECT_A.md  PHASE2_KICK_ARCHITECT_B.md  PHASE2_KICK_BUILDER.md  PHASE3_KICK_ARCHITECT_A.md  PHASE3_KICK_ARCHITECT_B.md  PHASE3_KICK_BUILDER.md
publicity-helper/: PUBLICITY_STRATEGY.en.md  PUBLICITY_STRATEGY.zh-CN.md
publish-helper/: README.md  extension-release-day.en.md  extension-release-day.zh-CN.md  repo-public-preflight.en.md  repo-public-preflight.zh-CN.md
spec/: README.md
spec/phase1/: README.md  SPEC_FORMATTING.md  SPEC_HOVER.md  SPEC_LEXER.md  SPEC_LSP_CORE.md  SPEC_PARSER.md  SPEC_TEST_MATRIX.md  SPEC_TRACEABILITY.md
spec/phase2/: README.md  SPEC_COMPLETION.md  SPEC_DIAGNOSTICS.md  SPEC_SAFETY.md  SPEC_TEST_MATRIX.md  SPEC_TRACEABILITY.md
spec/phase3/: README.md  SPEC_CLIENT.md  SPEC_CODELENS.md  SPEC_PACKAGING.md  SPEC_PREVIEW.md  SPEC_TEST_MATRIX.md  SPEC_TRACEABILITY.md
trace/: README.md
trace/phase1/: status.yaml  tracker.md
trace/phase2/: status.yaml  tracker.md
(+25 files in other folders)
