[package]
name = "vhs-analyzer-lsp"
description = "Language Server for VHS .tape files"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vhs-analyzer-core = { path = "../vhs-analyzer-core" }
tower-lsp-server = "0.23"
tokio = { version = "1", features = ["full"] }
dashmap = "6"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
futures = "0.3"
serde_json = "1"
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
